Fixes to tree checkbox alignment

--- a/public/resources/themes/nova-colored/theme.css
+++ b/public/resources/themes/nova-colored/theme.css
@@ -1879,7 +1879,7 @@ body .p-tree {
     padding: 0;
     margin: 0; }
     body .p-tree .p-tree-container .p-treenode {
-      padding: 0.143em 0.286em; }
+      padding: 0.143em 0; }
       body .p-tree .p-tree-container .p-treenode .p-treenode-content {
         padding: 0;
         border: 1px solid transparent;
@@ -1906,14 +1906,14 @@ body .p-tree {
           padding: 0.286em; }
         body .p-tree .p-tree-container .p-treenode .p-treenode-content .p-checkbox {
           margin: 0 0.5em 0 0; }
-          body .p-tree .p-tree-container .p-treenode .p-treenode-content .p-checkbox .p-checkbox-icon {
-            margin: 1px 0 0 0; }
         body .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight {
           background-color: #e02365;
           color: #ffffff; }
           body .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight .p-tree-toggler,
           body .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight .p-treenode-icon {
             color: #ffffff; }
+          body .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight .p-checkbox .p-checkbox-box {
+            border-color: #ffffff; }
         body .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight-contextmenu {
           border: 1px dashed #e02365; }
         body .p-tree .p-tree-container .p-treenode .p-treenode-content.p-treenode-selectable:not(.p-highlight):hover {
