--- a/src/components/tree/Tree.css
+++ b/src/components/tree/Tree.css
@@ -1,5 +1,5 @@
 .p-tree {
-    width: 18em;
+    width: 24em;
 }
 
 .p-tree .p-treenode-selectable.p-treenode-content {
